# confect

./: .gitignore  README.rst  pyproject.toml
confect/: __init__.py  click.py  conf.py  conf_.py  conf_depot.py  error.py  parser.py  prop_type.py
conflate/: conf_.py  conf_depot.py  error.py
tests/: conftest.py  test_click.py  test_conf.py  test_conflate.py  test_load.py  test_parser.py  test_prop_type.py
