[tool.poetry]
name = "confect"
version = "0.1.5"
description = "Python configuration library that provides pleasant configuration definition and access interface, and it reads unrestricted python configuration file."
authors = ["顏孜羲 <joseph.yen@gmail.com>"]
license = "apache-2.0"
readme = "README.rst"

repository = "https://github.com/d2207197/confect"
homepage = "https://github.com/d2207197/confect"
documentation = "https://github.com/d2207197/confect"

keywords = ["setting", "configuration", "config"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
autopep8 = "^1.4"
autoflake = "^1.2"
importmagic = "^0.1.7"
epc = "^0.0.5"
isort = "^4.3"
flake8 = "^3.5"
pylint = "^2.1"
mypy = "^0.620.0"
pytest-pudb = "^0.6.0"
pudb = "^2018.1"
